Added changes: Touch Hun

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="container">
       <div class="items">
-        <div class=" items item category"> CLUE CATEGORY </div>
+        <div class=" items item category"> CATEGORY </div>
         <div class="items item question"> QUESTION</div>
         <label for="user_answer">YOUR ANSWER HERE.</label>
         <div class="items item input">
@@ -52,8 +52,8 @@
   </div>
 
   <div id="end_game">
-    <div id="lose_title" class="items item lose_title"> You lose the Game. Click the button to restart the game. </div>
-    <div id="win_title" class="items item win_title">You win the Game. Click the button to restart the game.</div>
+    <div id="lose_title" class="items item lose"> You lose the Game. Click the button to restart the game. </div>
+    <div id="win_title" class="items item win">You win the Game. Click the button to restart the game.</div>
     <div><button id="restart_button" onclick="document.getElementById('user_input').value = ''"> START A NEW GAME
       </button> </div>
   </div>
